--- a/userservice/src/main/resources/templates/user_ThymeLeafTemplates/new_user.html
+++ b/userservice/src/main/resources/templates/user_ThymeLeafTemplates/new_user.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </head>
+<header class="nav-masthead mb-auto" th:replace="fragments/header :: header"></header>
     <body>
         <div class="container">
             <h1>Rock n Roll Album Art</h1>
@@ -27,4 +28,5 @@
             </form>
         </div>
     </body>
+<footer class="mastfoot mt-auto" th:replace="fragments/footer :: footer"></footer>
 </html>
